--- a/feadev/templates/feadev/grupo_estudo.html
+++ b/feadev/templates/feadev/grupo_estudo.html
@@ -53,7 +53,7 @@
 
 
   <div class="container">
-    <h2 class="two" id="machine">Machine Learning</h2>
+    <h2 class="two" id="machine">Página Machine Learning</h2>
     <h1 class="one">A SER DESENVOLVIDO</h1>
     <p class="fw-light"> Aguardando o Material da FEA </p>
   </div>
@@ -61,7 +61,7 @@
   <hr>
 
   <div class="container">
-    <h2 class="two" id="f_quanticas">Finanças Quânticas</h2>
+    <h2 class="two" id="f_quanticas">Página Finanças Quânticas</h2>
     <h1 class="one">A SER DESENVOLVIDO</h1>
     <p class="fw-light"> Aguardando o Material da FEA </p>
   </div>
@@ -69,7 +69,7 @@
   <hr>
 
   <div class="container">
-    <h2 class="two" id="the_office">The Office</h2>
+    <h2 class="two" id="the_office">Página The Office</h2>
     <h1 class="one">A SER DESENVOLVIDO</h1>
     <p class="fw-light"> Aguardando o Material da FEA </p>
   </div>
@@ -77,7 +77,7 @@
   <hr>
 
   <div class="container">
-    <h2 class="two" id="contagramacao">Contagramação</h2>
+    <h2 class="two" id="contagramacao">Página Contagramação</h2>
     <h1 class="one">A SER DESENVOLVIDO</h1>
     <p class="fw-light"> Aguardando o Material da FEA </p>
   </div>
