Conversão de img logo de jpg para png

--- a/feadev/templates/feadev/index.html
+++ b/feadev/templates/feadev/index.html
@@ -7,7 +7,7 @@
     <div class="row" id="one pb-3">
         <div class="col-md">
             <div class="card-logo fw-light" id="logo">
-                <img src="../static/img/FEA.jpg" width="200" height="140" alt="Logo FEA.dev">
+                <img src="../static/img/FEA.png" width="200" height="140" alt="Logo FEA.dev">
             </div>
         </div>
         <div class="col-md-8">
